syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2021 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.api.proto.java";
// <<<pbj.java_package = "com.hedera.hapi.node.network">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "basic_types.proto";
import "query_header.proto";
import "response_header.proto";

/**
 * Gets the time in nanoseconds spent in <tt>handleTransaction</tt> for one or more 
 * TransactionIDs (assuming they have reached consensus "recently", since only a limited 
 * number of execution times are kept in-memory, depending on the value of the node-local 
 * property <tt>stats.executionTimesToTrack</tt>).
 */
message NetworkGetExecutionTimeQuery {
  /**
   * standard info sent from client to node including the signed payment, and what kind of response
   * is requested (cost, state proof, both, or neither).
   */
  QueryHeader header = 1;

  /**
   * The id(s) of the transactions to get the execution time(s) of
   */
  repeated TransactionID transaction_ids = 2;
}

/**
 * Response when the client sends the node NetworkGetExecutionTimeQuery; returns
 * INVALID_TRANSACTION_ID if any of the given TransactionIDs do not have available
 * execution times in the answering node.
 */
message NetworkGetExecutionTimeResponse {
    /**
     * Standard response from node to client, including the requested fields: cost, or state proof,
     * or both, or neither
     */
    ResponseHeader header = 1;

    /**
     * The execution time(s) of the requested TransactionIDs, if available
     */
    repeated uint64 execution_times = 2;
}
